# VKR2

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASET_CARD.md  DATA_DICTIONARY.md  DATA_QUALITY_REPORT.md  HANDOFF.md  QUICKSTART.md  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/raw/: flight_delays_ru.parquet.dvc  flight_delays_ru_sample.csv.dvc
docker/: api.Dockerfile  mlflow.Dockerfile
reports/: DVC_SCREENSHOTS_GUIDE.md  MLFLOW_SCREENSHOTS_GUIDE.md  SCORED_DATASET_README.md  confusion_matrix.csv  experiments_log.md  test_metrics.json  val_metrics.json
scripts/: demo_feedback_cycle.py
src/: config.py
src/api/: inference.py  main.py  schemas.py
src/data/: generate.py  ingest.py  split.py
src/demo/: feedback_to_training.py
src/features/: build_features.py  feature_sets.py
src/models/: dvc_evaluate.py  dvc_featurize.py  dvc_train.py  evaluate.py  registry.py  score_dataset.py  train.py  tune.py
src/monitoring/: feedback.py  logger.py  metrics.py
